# sogar

./: README.md
powershell/Sogar/: Sogar.psd1  Sogar.psm1
rust/sogar/: Cargo.toml
rust/sogar-rs/: Cargo.toml
rust/sogar-rs/src/: lib.rs  logger.rs  main.rs
rust/sogar-rs/src/sogar/: mod.rs  sogar_config.rs
rust/sogar/sogar-cli/: Cargo.toml
rust/sogar/sogar-cli/src/: main.rs
rust/sogar/sogar-core/: Cargo.toml
rust/sogar/sogar-core/src/: config.rs  lib.rs  logger.rs  registry.rs  sogar.rs  sogar_config.rs  sogar_registry.rs
rust/sogar/src/: lib.rs  main.rs  sogar.rs  sogar_config.rs
