[package]
name = "sogar-core"
version = "0.3.0"
authors = ["Anastasiia Romaniuk <romaniuk.anastasiia@apriorit.com>"]
edition = "2018"
description = "Simple OCI Generic Artifact Registry (SOGAR)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/sogar"

[dependencies]
reqwest = { version = "0.11.2", features = ["json", "stream"]}
clap = "2.31"
config = { version = "0.10", default-features = false, features = ["yaml"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.8"
url = "1.7.1"
regex = "0.2"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros", "fs"]}
tempfile = "3.0"
thiserror = "1.0.23"
futures = "0.3"
tokio-util = { version = "0.6", features = ["codec"] }
# FIXME: update once next saphir version is published
saphir = { version = "2.8", features = ["full"], git = "https://github.com/CBenoit/saphir", branch = "hyper-update" }
hyper = { version = "0.14" }

# location of special directories
dirs-next = "2"

# logging
slog =  "2.5"
slog-term = "2.4"
slog-async = "2.3"
slog-scope = "4.3"
slog-envlogger = "2.2"
slog-scope-futures = "0.1.1"
slog-stdlog = "4.0"
